# pose_terrier

./: CMakeLists.txt  JESTOR.cc  JESTOR.h  KalmanFilter.cc  KalmanFilter.h  MEKF.cc  MEKF.h  MEKF2.cc  MEKF2.h  PoseSolver.cc  PoseSolver.h  QuateRA.cc  QuateRA.h  README.md  Utilities.cc  Utilities.h  cost_functor.h  ekf_f_functor.h  ekf_pose_tracking_test.cc  main.cc  measurement.pb.cc  measurement.pb.h  measurement.proto  measurementx.proto  mekf_f_functor.h  mekf_pose_tracking_test.cc  multiple_pose_estimator_test.cc  nls_multiple_pose_estimator_test.cc  nonlinear_propagation_functor.h  params.json  pnp_mekf_pose_tracking_test.cc  pnp_multiple_pose_estimator_test.cc  pnp_pose_estimator_main.cc  pnp_pose_tracking_test.cc  pose.pb.cc  pose.pb.h  pose.proto  pose_estimator.cc  pose_estimator_main.cc  pose_estimator_main_inertia.cc  (+8 more)
scripts/: boldify.m  denan.m  f_read_covars.m  f_read_filter_logs.m  f_read_omegas.m  f_read_pos_states.m  f_read_poses.m  f_read_timestamps.m  f_read_truth_logs.m  f_statistics.m  f_statistics_quatera.m  main_plotting.m  main_plotting_quatera.m  mekf_test.m  plot_poses.jl  plot_poses.m  post_analysis_main.m  post_analysis_main_angvel.m  post_analysis_main_with_truth.m  post_analysis_main_with_truth_angvel.m  post_analysis_main_without_truth.m  quat_data_to_euler_data.m  rotation.m
